test/mutation_analysis/s0006_zigzag_conversion/hafis/starchat/mutants/14/result.txt
./test/mutation_analysis/s0006_zigzag_conversion/hafis/starchat/mutants/14/Solution.java:28: error: unreachable statement
        for (int i = 0; false; i++) {
                                    ^
1 error
